# Test-cryptobot

./: .env-example  .env-example.docker-compose.dev  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/: __main__.py  aiogram_entrypoint.py  task_entrypoint.py
src/cryptobot/: __init__.py
src/cryptobot/adapters/: __init__.py  calculator_gateway.py  gateways.py  repos.py
src/cryptobot/application/: __init__.py
src/cryptobot/application/cases/: __init__.py  add_tracking.py  notify.py  register_user.py
src/cryptobot/application/ports/: __init__.py  gateways.py  loggers.py  repos.py  transactions.py
src/cryptobot/domain/: __init__.py  entities.py  errors.py  vos.py
src/cryptobot/facade/: __init__.py
src/cryptobot/facade/adapters/: __init__.py  gateways.py  loggers.py  repos.py  transactions.py
src/cryptobot/facade/services/: __init__.py  add_tracking.py  notify.py  register_user.py
src/cryptobot/periphery/: __init__.py  bots.py  brokers.py  envs.py
src/cryptobot/periphery/db/: __init__.py  engines.py  sessions.py  tables.py
src/cryptobot/periphery/db/migrations/: env.py
src/cryptobot/periphery/db/migrations/versions/: 801e5cb98182_add_tables.py
src/cryptobot/presentation/: __init__.py  bot_dispatching.py  event_routes.py  parsers.py  tasks.py
